--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 
     <dependencies>
 
+        <!--缓存数据-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
