--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
     </properties>
 
     <dependencies>
+
+        <!--Swagger-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
         <!--ShardingJDBC 读写分离-->
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
